tests/base/valid/Import_Valid_6.whiley
import println from whiley.lang.System
import println from whiley.io.*


void ::main(System.Console sys):
	x = 1
	y = 2
	sys.out.println(x+y)
