tests/base/invalid/RealAdd_CompileFail_1.whiley


int f(int x):
    return x

void ::main(System.Console sys):
    x = 1
    x = f(x + 2.3)
